--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
 requests
-# waiting for
-# https://github.com/HumanBrainProject/ebrains-drive/pull/22
-# and
-# https://github.com/HumanBrainProject/ebrains-drive/pull/20
-# to merge and release
-git+https://github.com/xgui3783/ebrains-drive.git@tmp_fixDeleteUseIO
+ebrains-drive>=0.6.0
